# xml_parser_bridge_c

./: CMakeLists.txt  README.md  xml_validator.c  xml_validator.h
test_data/successful/: test.xml  test.xsd
test_data/wrong/: test.xml  test.xsd
